# customs-health-check-tool-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  api-admin.md  api-user.md  docker-compose.yml  miêu tả dự án.txt  pyproject.toml  worker.py
.githooks/: commit-msg
app/: main.py
app/auth/: repository.py  router.py  schemas.py  service.py
app/core/: config.py  dependencies.py  email.py  email_service.py  middleware.py  redis.py  report_client.py  security.py  storage.py
app/dashboard/: router.py  schemas.py  service.py
app/models/: __init__.py  etariff_usage_log.py  password_reset_token.py  request.py  submission.py  tenant.py  tenant_email_config.py  user.py
app/requests/: presigned_service.py  repository.py  router.py  schemas.py  service.py  tasks.py
app/settings/: router.py  schemas.py  service.py
app/submissions/: repository.py  router.py  schemas.py  service.py  tasks.py
app/tenants/: repository.py  router.py  schemas.py  service.py
app/users/: repository.py  router.py  schemas.py  service.py
docs/: README.md  code-standards.md  codebase-summary.md  ops-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
docs/plans/: 2026-03-31-backend-implementation.md  2026-04-03-missing-backend-features.md  (+1 more)
migrations/: env.py
scripts/: deploy.sh  entrypoint.sh  seed.py  setup-local.sh  setup.sh  start.sh  status.sh  stop.sh  test.sh
tests/: conftest.py  test_auth.py  test_dashboard.py  test_health.py  test_requests.py  test_security.py  test_settings.py  test_tenants.py  test_users.py
(+9 files in other folders)
